--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,3 @@
-.Header-brand {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-}
-.Header-brand-img {
-  height: 50px;
-  width: 50px;
-  margin: 10px;
+.Header-logo-text {
+  margin-left: 12px;
 }
