fix md-to-react script

--- a/scripts/md-to-react/index.js.mustache
+++ b/scripts/md-to-react/index.js.mustache
@@ -10,7 +10,7 @@ import {{& name}} from  "./images/{{& path}}"
 // create map from path to image
 const images = {
 {{#images}}
-  "images/{{& path}}": {{& name}},
+  "./images/{{& path}}": {{& name}},
 {{/images}}
 }
 
