--- a/src/pages/Blog/index.css
+++ b/src/pages/Blog/index.css
@@ -6,12 +6,21 @@
 }
 .Blog-post {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 .Blog-list li {
   line-height: 1.75em;
 }
 .Blog-list .Blog-date {
+  font-style: italic;
+  font-size: 14px;
   color: rgba(0, 0, 0, 0.5);
   margin-right: 7px;
+}
+.Blog-list .Blog-title {
+  font-size: 24px;
+  font-weight: 700;
+  color: #20232a;
 }
