--- a/src/components/PageLayout.module.css
+++ b/src/components/PageLayout.module.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  /* background-color: red; */
 }
 .main {
+  flex: 1;
+  /* background-color: green; */
 }
