--- a/src/pages/About/index.module.css
+++ b/src/pages/About/index.module.css
@@ -1,20 +1,20 @@
-.header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  max-width: 400px;
-  justify-content: space-between;
-}
-.profile {
-  max-width: 150px;
-}
-.headerTexts {
+.Component {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-  white-space: nowrap;
+  align-items: center;
 }
-.headerText {
-  margin: 0;
+.header {
+  font-size: 2.5rem;
+}
+.links {
+  display: flex;
+  flex-direction: row;
+}
+.intro {
+  color: #4e4e4e;
+  font-size: 1.3rem;
+  margin-top: 50px;
+}
+.email {
+  font-weight: 700;
 }
