--- a/src/pages/Home/Post.module.css
+++ b/src/pages/Home/Post.module.css
@@ -1,23 +1,23 @@
 .component {
   display: flex;
-  flex-direction: row;
-  max-width: 900px;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 .image {
   display: flex;
   flex: 1;
+  width: 246px;
 }
 .content {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  width: 246px;
+  padding-top: 15px;
 }
 .title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1.15;
-  max-width: 500px;
   overflow-wrap: break-word;
   color: rgb(0, 0, 0);
 }
