--- a/src/pages/Home/index.module.css
+++ b/src/pages/Home/index.module.css
@@ -1,8 +1,20 @@
-.posts {
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.posts {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 .post {
+  margin: 10px;
   margin-top: 35px;
+  flex-grow: 1;
 }
