--- a/src/pages/Home/About.module.css
+++ b/src/pages/Home/About.module.css
@@ -1,29 +1,39 @@
 .component {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   margin-left: 20px;
   margin-right: 20px;
+}
+.component h3 {
+  margin-top: 0;
+}
+.profile {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5px;
 }
 .header {
   font-size: 2.5rem;
 }
-.links {
-  display: flex;
-  flex-direction: row;
-}
 .intro {
   color: #4e4e4e;
   font-size: 1.3rem;
-  margin-top: 50px;
 }
-.list {
+.followMeLink {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  font-size: 1.3rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-.listItem {
-  margin-top: 5px;
-  margin-bottom: 5px;
+.introBk {
+  color: #4e4e4e;
+  font-size: 1.3rem;
+  margin-top: 50px;
 }
 .email {
   font-weight: 700;
