--- a/src/pages/Home/index.module.css
+++ b/src/pages/Home/index.module.css
@@ -5,18 +5,6 @@
   margin-top: 30px;
   margin-bottom: 200px;
 }
-.posts {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.post {
-  margin: 10px;
-  margin-top: 35px;
-  flex-grow: 1;
+.logo {
+  height: 250px;
 }
