--- a/src/pages/Home/EmailSubscriptionForm.module.css
+++ b/src/pages/Home/EmailSubscriptionForm.module.css
@@ -12,8 +12,9 @@
   font-size: 2.5rem;
   margin-bottom: 16px;
 }
-.input {
+.form {
   width: 400px;
+  margin-bottom: 30px;
 }
 .action {
   font-size: 1.2rem;
