--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,8 +1,20 @@
-.Footer {
+.component {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: rgb(32, 35, 42);
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.link {
+  color: white;
+}
+.link:hover {
+  color: white;
 }
