--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-html,
-body {
+html {
   height: 100%;
 }
 body {
+  height: 100%;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -23,6 +23,7 @@ code {
   height: 100%;
   background-color: #fff;
   overflow: auto;
+  scroll-behavior: smooth;
 }
 
 footer {
