--- a/src/pages/HomePage/TutorialCard.module.css
+++ b/src/pages/HomePage/TutorialCard.module.css
@@ -4,5 +4,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
-  font-size: 1.7rem;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
