--- a/src/pages/HomePage/Tutorials.module.css
+++ b/src/pages/HomePage/Tutorials.module.css
@@ -1,3 +1,8 @@
 .component {
-  background: #f4f7f9;
+  /* background: #f4f7f9; */
+  display: flex;
+  flex-direction: row;
+}
+.card {
+  margin: 15px;
 }
