change syntax highlight color

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ pre {
   padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 15px;
-  background: #282c34;
+  background: #282b2e;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
