--- a/src/components/SideNav.module.css
+++ b/src/components/SideNav.module.css
@@ -1,6 +1,12 @@
 .component {
   width: 300px;
 }
+.overviewLink {
+  font-size: 20px;
+  font-weight: 700;
+  display: flex;
+  flex-direction: row;
+}
 .sideNav {
   width: 300px;
   padding-top: 20px;
