--- a/src/pages/tutorials/SolidityMultiSigWallet/index.module.css
+++ b/src/pages/tutorials/SolidityMultiSigWallet/index.module.css
@@ -6,9 +6,9 @@
 }
 .header {
   font-size: 2.2rem;
-  margin-bottom: 50px;
 }
 .section {
+  margin-top: 40px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
