--- a/src/components/SideNav.module.css
+++ b/src/components/SideNav.module.css
@@ -16,6 +16,7 @@
   /* 58px = top nav height */
   height: calc(100vh - 58px);
   background-color: white;
+  padding-bottom: 100px;
 }
 .header {
   padding-top: 20px;
